alignment issue resolved.

--- a/modules/look/client-react/ui-antd/styles/global.less
+++ b/modules/look/client-react/ui-antd/styles/global.less
@@ -133,7 +133,7 @@
 }
 @media only screen and (min-width: 1441px) {
   .page-content {
-    padding: 69px 16vw 0px 16vw;
+    padding: 69px 8vw 0px 8vw;
   }
 }
 
